<resources>
    <string name="app_name">MyWorkout</string>

    <string name="title_home">Home</string>
    <string name="title_routine">Routine</string>
    <string name="title_workout">Workout</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_exercise_settings">Exercise Settings</string>
    <string name="title_stat">Stats</string>
    <string name="title_exercise">Exercise</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!--  WorkoutFragment  -->
    <string name="add_exercise">Add exercise</string>
    <string name="timer_90_sec">Rest 90 Seconds</string>

    <!--  ExerciseFragment  -->
    <string name="intent_result_list">result_list</string>
    <string name="new_exercise">New exercise</string>

    <!--  RoutineDetailActivity  -->
    <string name="action_delete_workout">Delete workout</string>
    <string name="action_new_workout">New workout</string>
    <string name="action_edit_workout">Edit workout</string>
    <string name="action_move_left_workout">Move left</string>
    <string name="action_move_right_workout">Move right</string>

    <string name="workout_exercise_add_set">Add set</string>
    <string name="workout_exercise_remove_set">Remove set</string>
    <string name="workout_exercise_remove_exercise">Remove exercise</string>
    <string name="workout_exercise_settings">Exercise settings</string>

    <!--  RoutineFragment  -->
    <string name="routine_delete">Delete</string>

    <!--  History filters  -->
    <string name="action_filter">Filter</string>
</resources>
