<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new_workout"
        app:showAsAction="never"
        android:title="@string/action_new_workout" />

    <item
        android:id="@+id/action_edit_workout"
        app:showAsAction="never"
        android:title="@string/action_edit_workout" />

    <item
        android:id="@+id/action_delete_workout"
        app:showAsAction="never"
        android:title="@string/action_delete_workout" />

    <item
        android:id="@+id/action_move_right_workout"
        app:showAsAction="never"
        android:title="@string/action_move_right_workout" />

    <item
        android:id="@+id/action_move_left_workout"
        app:showAsAction="never"
        android:title="@string/action_move_left_workout" />

</menu>